	Remove WXWIDGETS-specific code. Call term_reset() using GP_ATEXIT().

	* src/wxterminal/Makefile.am:
	* src/wxterminal/wxt_plot.h:
	Remove the file wxt_plot.h, now unused.

	* src/wxterminal/wxt_gui.cpp (wxt_init, wxt_atexit):
	* src/wxterminal/wxt_gui.h:
	Use GP_ATEXIT() to register wxt_atexit().
	Rework "persist" behaviour on Windows.

2006-11-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::DrawToDC): Draw the zoom
	coordinates with the same font as the plot.

2006-11-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (init_term): Normally we initialize the default terminal
	immediately on program entry. However, if the default is x11 then defer
	initialization until an actual plot command.  This mitigates problems
	if gnuplot_x11 cannot be started normally, and allows the user to select
	a different driver in the case that x11 is the default but is broken.
	Bug #1530601

2006-11-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Restore a few lines of code removed in
	the 21-Oct-2006 patch that added absolute placement of margins. This
	restores the placement of the right plot boundary in some corner
	cases involving color plots with no colorbox. However, I believe that
	this "fix" is only needed only to counteract errors in the colorbox
	code itself.
	Bug #1590363

	* term/x11.trm (parse_driver): If this routine fails on first entry, we
	must not call int_error() because the longjump has not been set up yet.
	I.e. "setenv GNUPLOT_DRIVER_DIR illegal; setenv GNUTERM x11; gnuplot"
	would segfault on entry. Just print a warning and hope the user notices.

2006-11-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Fix error in logic of 2D and 3D
	rotation matrix initialization.

2006-11-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* VERSION PATCHLEVEL src/version.c: Declare this version as 4.3 pl 0.

2006-11-01  Ethan Merritt  <merritt@u.washington.edu>
